Fix copy button wrapping

--- a/website/src/index.css
+++ b/website/src/index.css
@@ -618,6 +618,7 @@ dt::after {
 
 .bash {
   font-family: monospace;
+  font-size: 15px;
   border: black 1px solid;
   padding: 5px;
 }
